# test

./: CMakeLists.txt  README.md  mod.json
.github/workflows/: multi-platform.yml
src/: main.cpp
